Fix images and spacing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,3 +48,7 @@ html.is-animating .transition-fade {
     padding-bottom: 1.5rem; /* Palautetaan alkuperäinen padding */
   }
 }
+
+.rounded {
+  border-radius: 1rem;
+}
